# python-project-83

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: base.html  index.html
